--- a/layouts/_partials/components/PostList.html
+++ b/layouts/_partials/components/PostList.html
@@ -10,7 +10,7 @@
     >
       {{ with $img }}
         <figure class="overflow-hidden rounded-md shadow-md/100 max-md:hidden">
-          {{ partial "images/Image" (dict "src" . "alt" $title "sizes" (slice "240x240")) }}
+          {{ partial "images/Image" (dict "src" . "alt" $title "mode" "square" "base" 240 "process" "smart") }}
         </figure>
       {{ end }}
       <div class="flex flex-col justify-around gap-4">
@@ -28,7 +28,9 @@
         <p class="line-clamp-3 text-sm text-neutral-400">
           {{ or .Description .Summary | plainify | htmlUnescape | truncate 500 }}
         </p>
-        <button class="cursor-pointer text-start font-medium text-amber-400 text-shadow-sm/100 hover:text-amber-500">
+        <button
+          class="cursor-pointer text-start font-medium text-amber-400 text-shadow-sm/100 hover:text-amber-500"
+        >
           Lihat Selengkapnya
         </button>
       </div>
