--- a/layouts/_markup/render-blockquote-alert.html
+++ b/layouts/_markup/render-blockquote-alert.html
@@ -1,20 +1,20 @@
-{{ $data := site.Data.callout }}
+{{ $data := site.Data.alert }}
 {{ $callout := index $data .AlertType }}
 
 {{/* Fallback jika AlertType tidak ditemukan */}}
-{{ if not $callout }}
+{{/*  {{ if not $callout }}
   {{ $callout = index $data "note" }}
-{{ end }}
+{{ end }}  */}}
 
 {{/* Fallback untuk icon */}}
-{{ $icon := $callout.icon }}
+{{/*  {{ $icon := $callout.icon }}
 {{ if not $icon }}
   {{ $icon = "pen" }}
-{{ end }}
+{{ end }}  */}}
 
 <aside class="{{ $callout.bg }} {{ $callout.border }} border-2 my-8 rounded-sm px-4 shadow-sm/100">
   <div class="not-prose flex items-center justify-start gap-4">
-    {{ partial "assets/Icon" (dict "name" $icon "class" "size-6") }}
+    {{/*  {{ partial "assets/Icon" (dict "name" $icon "class" "size-6") }}  */}}
     <p class="{{ $callout.text }} my-4 text-xl font-semibold">
       {{ with .AlertTitle }}
         {{ . }}
