--- a/layouts/_partials/main/header.html
+++ b/layouts/_partials/main/header.html
@@ -1,10 +1,9 @@
-<header class="border-b border-b-neutral-700">
-  <div class="flex items-center justify-between flex-wrap max-w-[100ch] mx-auto min-h-16 py-6 px-4 gap-4">
-    <a href="{{ site.Home.Permalink }}" class="font-semibold text-white text-2xl">{{ site.Title }}</a>
-    <nav class="flex items-center gap-4 font-semibold">
-      {{ range site.Menus.main }}
-        <a href="{{ .URL | absURL }}" class="hover:text-amber-300">{{ .Name }}</a>
-      {{ end }}
-    </nav>
-  </div>
+<header
+  class="fixed start-0 top-0 z-40 flex min-h-16 w-full items-center justify-between border-b border-zinc-300 bg-zinc-50 px-4 md:hidden dark:border-zinc-700 dark:bg-zinc-800"
+>
+  {{ partial "components/brand" . }}
+  <button data-toggle-sidebar="sidebar" class="text-black dark:text-white">
+    {{ partial "assets/icon" (dict "name" "list" "size" 28) }}
+    <span class="sr-only">Open Menu</span>
+  </button>
 </header>
