--- a/layouts/_partials/meta/json-ld.html
+++ b/layouts/_partials/meta/json-ld.html
@@ -29,7 +29,7 @@
   {{- end }}
 {{- end }}
 
-{{- $images := partial "_funcs/get-page-images" . -}}
+{{- $images := partial "function/get-image-page" . -}}
 
 <script type="application/ld+json">
 {
