--- a/layouts/index.sitemaphtml.html
+++ b/layouts/index.sitemaphtml.html
@@ -34,7 +34,7 @@
     <ul>
       {{- range site.RegularPages -}}
         <li>
-          <a href="{{ .Permalink }}">{{ .Title }}</a>
+          <a href="{{ .RelPermalink }}">{{ .Title }}</a>
         </li>
       {{- end -}}
     </ul>
