--- a/layouts/_partials/assets/css.html
+++ b/layouts/_partials/assets/css.html
@@ -1,42 +1,14 @@
-{{- with resources.Get "css/output.css" -}}
-  {{- if hugo.IsDevelopment -}}
+{{- with resources.Get "css/output.css" }}
+  {{- if hugo.IsDevelopment }}
     <link rel="stylesheet" href="{{ .RelPermalink }}" />
-  {{- else -}}
-    {{- with . | minify | fingerprint -}}
+  {{- else }}
+    {{- with . | minify | fingerprint }}
       <link
         rel="stylesheet"
         href="{{ .RelPermalink }}"
         integrity="{{ .Data.Integrity }}"
         crossorigin="anonymous"
       />
-    {{- end -}}
-  {{- end -}}
-{{- end -}}
-
-{{/* ===== FONTS =====  */}}
-{{- $fontsData := site.Data.fonts -}}
-{{- range $fontsData -}}
-  {{- if .preload -}}
-    {{- $res := resources.Get .file -}}
-    {{- if $res -}}
-      <link rel="preload" href="{{ $res.RelPermalink }}" as="font" type="font/woff2" crossorigin>
-    {{- end -}}
-  {{- end -}}
-{{- end -}}
-
-{{- /* Font-face CSS */}}
-<style>
-{{- range $fontsData -}}
-  {{- $res := resources.Get .file -}}
-  {{- if $res -}}
-    @font-face {
-      font-family: '{{ .family }}';
-      font-style: {{ .style }};
-      font-weight: {{ .weight }};
-      font-display: swap;
-      src: url('{{ $res.RelPermalink }}') format('woff2');
-    }
-  {{- end -}}
-{{- end -}}
-</style>
-{{- /**/ -}}
+    {{- end }}
+  {{- end }}
+{{- end }}
