--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -2,16 +2,37 @@
 <html
   lang="{{ site.Language.LanguageCode }}"
   dir="{{ or site.Language.LanguageDirection `ltr` }}"
-  class="bg-neutral-800 font-sans text-neutral-300"
+  class="bg-zinc-50 font-sans font-light text-zinc-700 dark:bg-zinc-800 dark:text-zinc-300"
 >
-  {{ partial "main/head" . }}
-  <body>
+  <head>
+    {{ partial "main/head" . }}
+  </head>
+  <body
+    class="md:grid md:grid-cols-[256px_minmax(0,1fr)] md:gap-4 lg:grid-cols-[288px_minmax(0,1fr)] xl:grid-cols-[320px_minmax(0,1fr)]"
+  >
+    {{/* TESTING ONLY */}}
+    <nav class="sr-only">
+      <ul>
+        {{- range site.RegularPages -}}
+          <li>
+            <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+          </li>
+        {{- end -}}
+      </ul>
+    </nav>
+    {{/* TESTING ONLY */}}
+
     {{ partial "main/header" . }}
-    <main class="w-full">
-      <div class="prose prose-invert mx-auto w-full px-4 py-8 max-w-[80ch]">
-        {{ block "main" . }}{{ end }}
+    {{ partial "main/sidebar" . }}
+
+
+    <div class="md:col-start-2">
+      <div class="mx-auto w-full max-w-5xl px-4 pt-28 lg:px-8">
+        <main>
+          {{ block "main" . }}{{ end }}
+        </main>
+        {{ partial "main/footer" . }}
       </div>
-    </main>
-    {{ partial "main/footer" . }}
+    </div>
   </body>
 </html>
