--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -156,12 +156,10 @@
     --font-weight-normal: 400;
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
-    --leading-relaxed: 1.625;
     --radius-xs: 0.125rem;
     --radius-sm: 0.25rem;
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
-    --blur-sm: 8px;
     --aspect-video: 16 / 9;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1292,6 +1290,12 @@
        -moz-box-pack: justify;
             justify-content: space-between;
   }
+  .justify-center {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+       -moz-box-pack: center;
+            justify-content: center;
+  }
   .justify-start {
     -webkit-box-pack: start;
     -webkit-justify-content: flex-start;
@@ -1573,6 +1577,11 @@
     padding-block: -moz-calc(var(--spacing) * 8);
     padding-block: calc(var(--spacing) * 8);
   }
+  .py-12 {
+    padding-block: -webkit-calc(var(--spacing) * 12);
+    padding-block: -moz-calc(var(--spacing) * 12);
+    padding-block: calc(var(--spacing) * 12);
+  }
   .py-16 {
     padding-block: -webkit-calc(var(--spacing) * 16);
     padding-block: -moz-calc(var(--spacing) * 16);
@@ -1712,6 +1721,9 @@
   }
   .text-violet-800 {
     color: var(--color-violet-800);
+  }
+  .text-white {
+    color: var(--color-white);
   }
   .text-yellow-800 {
     color: var(--color-yellow-800);
@@ -1860,6 +1872,13 @@
         @supports (color: color-mix(in lab, red, red)) {
           background-color: color-mix(in oklab, var(--color-zinc-500) 20%, transparent);
         }
+      }
+    }
+  }
+  .hover\:text-amber-500 {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-amber-500);
       }
     }
   }
